fix(lint):cleared lint

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,77 @@
-<p>home works!</p>
+<div class="container">
+
+
+    <div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
+    padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+    border-radius: 8px; will-change: transform;" *ngIf="selected==='1'">
+        <iframe loading="eager"
+            style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+            src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFIzrSOKKM&#x2F;view?embed"
+            allowfullscreen="allowfullscreen" allow="fullscreen">
+
+        </iframe>
+        <form class="form" style="width:200px; background-color: red;">
+            <input type="text" placeholder="Header" /> <br />
+
+            <input type="text" placeholder="Discount" />
+        </form>
+
+
+    </div>
+    <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFIzrSOKKM&#x2F;view?utm_content=DAFIzrSOKKM&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+        target="_blank" rel="noopener">Some things have to end for better things to begin</a> by Harsha Javalkar
+
+
+
+
+
+
+
+    <!-- #2 -->
+
+
+    <div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
+    padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+    border-radius: 8px; will-change: transform;" *ngIf="selected==='2'">
+        <iframe loading="lazy"
+            style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+            src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFI0DapfDw&#x2F;view?embed"
+            allowfullscreen="allowfullscreen" allow="fullscreen">
+        </iframe>
+    </div>
+    <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFI0DapfDw&#x2F;view?utm_content=DAFI0DapfDw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+        target="_blank" rel="noopener">Design</a> by Harsha Javalkar
+
+
+    <a href="javascript:void(0)" (click)="clickedEdit(1)"> Edit</a>
+
+
+    <!-- 3 -->
+
+    <div style="position: relative; width: 100%; height: 0; padding-top: 141.4286%;
+ padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;" *ngIf="selected==='3'">
+        <iframe loading="lazy"
+            style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+            src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFI0OzvFKc&#x2F;view?embed"
+            allowfullscreen="allowfullscreen" allow="fullscreen">
+        </iframe>
+    </div>
+    <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFI0OzvFKc&#x2F;view?utm_content=DAFI0OzvFKc&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
+        target="_blank" rel="noopener">Design</a> by Harsha Javalkar
+</div>
+
+
+
+<div id="feedback-form">
+    <div>
+        <form>
+            <input type="text" name="email" placeholder="Email">
+            <input type="text" name="name" placeholder="Name">
+            <label for="feedback-notify">Remind me about this event via SMS</label>
+            <input type="checkbox" id="feedback-notify" name="notify">
+            <input type="text" id="feedback-phone" name="phone" placeholder="Phone number">
+            <button type="submit">Save</button>
+        </form>
+    </div>
+</div>
