--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,41 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg sticky-top">
+    <a class="branding" routerLink="">Proview</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fa fa-bars h1"></i>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto me-5">
+            <li class="nav-item" data-bs-toggle="collapse">
+                <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="">
+                    <i class="fa fa-home"></i> Home</a>
+            </li>
+
+            <li class="nav-item" data-bs-toggle="collapse">
+                <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink="home">
+                    <i class="fa fa-home"></i> Home</a>
+            </li>
+            <li class="nav-item active" data-bs-toggle="collapse">
+                <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink=""><i
+                        class="fa fa-user-alt"></i> Profile <span class="sr-only"></span></a>
+            </li>
+
+
+            <li class="nav-item" data-bs-toggle="collapse">
+                <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" routerLink=""><i
+                        class="fa fa-heart"></i> Wishlist</a>
+            </li>
+
+            <li class="nav-item" data-bs-toggle="collapse">
+                <a class="nav-link" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
+                    routerLink="login"><i class="fa fa-sign-in"></i> Login</a>
+            </li>
+
+            <li class="nav-item" data-bs-toggle="collapse">
+                <a class="nav-link text-danger" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"
+                    routerLink="login"><i class="fad fa-sign-out"></i> Logout</a>
+            </li>
+        </ul>
+    </div>
+</nav>
